updating with config file

--- a/src/popup.html
+++ b/src/popup.html
@@ -4,10 +4,11 @@
   <style>
   #message_container {
     width: 200px;
+    height: 200px;
     margin: 0; 
     padding: 0;
     text-align: left;
-    
+    overflow:auto;
     outline: none;
   }
   #notification_list{
@@ -17,7 +18,7 @@
   #notification_list li{
     margin-left:0; 
     padding: 3px;
-    background-color: green;
+    background-color: #f7e28f;
     margin-top: 2px;
     border: 1px solid #000000;
     padding-top: 5px;
@@ -31,6 +32,7 @@
 
   </div>
   <p>Mark all as read</p>
+  <script src="config.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
