completing mark all as read

--- a/src/popup.html
+++ b/src/popup.html
@@ -31,7 +31,7 @@
     </ul>
 
   </div>
-  <p>Mark all as read</p>
+  <p id="mark_all_read">Mark all as read</p>
   <script src="config.js"></script>
   <script src="popup.js"></script>
 </body>
