--- a/src/popup.html
+++ b/src/popup.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+
 <html>
+  
 <head>
+  
   <style>
+    
   #message_container {
     width: 200px;
     height: 200px;
@@ -26,13 +30,15 @@
   </style>
 </head>
 <body>
+  
   <div id="message_container">
-    <ul id="notification_list">
-    </ul>
-
+    <ul id="notification_list"> </ul>
   </div>
+  
   <p id="mark_all_read">Mark all as read</p>
   <script src="config.js"></script>
   <script src="popup.js"></script>
+  
 </body>
+  
 </html>
