local Storage added and signin embedded in popup.html

--- a/src/popup.html
+++ b/src/popup.html
@@ -30,15 +30,18 @@
   </style>
 </head>
 <body>
-  
-  <div id="message_container">
+  <div id="loginDetails">
+        Insert Token: <input type="text" id="gitHubToken">
+        <button id="setGitToken">Save</button>
+      </div>
+     <div id="message_container">
     <ul id="notification_list"> </ul>
   </div>
   
   <p id="mark_all_read">Mark all as read</p>
   <script src="config.js"></script>
   <script src="popup.js"></script>
-  
+  <script src="options.js"></script>
 </body>
   
 </html>
