--- a/src/popup.html
+++ b/src/popup.html
@@ -37,8 +37,8 @@
      <div id="message_container">
     <ul id="notification_list"> </ul>
   </div>
-  
-  <p id="mark_all_read">Mark all as read</p>
+  <br>
+  <button id="mark_all_read">Mark all as read</button>
   <script src="config.js"></script>
   <script src="popup.js"></script>
   <script src="options.js"></script>
