--- a/src/popup.html
+++ b/src/popup.html
@@ -7,8 +7,8 @@
   <style>
     
   #message_container {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 270px;
     margin: 0; 
     padding: 0;
     text-align: left;
@@ -22,21 +22,26 @@
   #notification_list li{
     margin-left:0; 
     padding: 3px;
-    background-color: #f7e28f;
+    background-color: #e6ffff;
     margin-top: 2px;
+    margin-bottom: 5px;
     border: 1px solid #000000;
     padding-top: 5px;
+    font-family: Trebuchet MS;
+    text-decoration: none;
+    font-size: 14px;
   }
   </style>
 </head>
 <body>
-  <div id="loginDetails">
-        Insert Token: <input type="text" id="gitHubToken">
-        <button id="setGitToken">Save</button>
+  <center><h1 style="color:Teal;">GitHub Notification Bot</h1></center>
+  <center><div id="loginDetails">
+        <h3>Insert Personal Access Token:</h3> <input type="text" id="gitHubToken"><br><br>
+        <button id="setGitToken" style="text-align: center;">Save</button>
       </div>
      <div id="message_container">
     <ul id="notification_list"> </ul>
-  </div>
+  </div></center>
   <br>
   <button id="mark_all_read">Mark all as read</button>
   <script src="config.js"></script>
