--- a/src/options.html
+++ b/src/options.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-    </head>
-    <body>
-      <div id="loginDetails">
-        Insert Token: <input type="text" id="gitHubToken" value="ff***dfg34">
-      </div>
-      <button id="setGitToken">Save</button>
-    </body>
-    <script src="options.js"></script>
-  </html>
+<html>
+<head>
+</head>
+<body>
+  <div id="loginDetails">
+    Insert Token: <input type="text" id="gitHubToken" value="ff***dfg34">
+  </div>
+  <button id="setGitToken">Save</button>
+</body>
+<script src="config.js"></script>
+<script src="popup.js"></script>
+<script src="options.js"></script>
+</html>
