--- a/src/popup.html
+++ b/src/popup.html
@@ -23,6 +23,13 @@
     border: 1px solid #000000;
     padding-top: 5px;
   }
+  #mark_all_read{
+      text-decoration: none;
+    }
+  #mark_all_read  :hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
