--- a/src/popup.html
+++ b/src/popup.html
@@ -51,6 +51,7 @@
   </div></center>
   <br>
   <button id="mark_all_read">Mark all as read</button>
+  <input type="checkbox" name="enable_notifications" value="enable_notifications"> Enable Notifications<br>
   <script src="config.js"></script>
   <script src="popup.js"></script>
   <script src="options.js"></script>
