Code to use file-need to check code

--- a/src/options.html
+++ b/src/options.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+
 <html>
 <head>
 </head>
 <body>
   <div id="loginDetails">
-    Insert Token: <input type="text" id="gitHubToken" value="ff***dfg34">
+    Insert Token: <input type="text" id="gitHubToken" >
   </div>
   <button id="setGitToken">Save</button>
 </body>
