--- a/src/popup.html
+++ b/src/popup.html
@@ -45,6 +45,7 @@
   <center><div id="loginDetails">
         <h3>Insert Personal Access Token:</h3> <input type="text" id="gitHubToken"><br><br>
         <button id="setGitToken" style="text-align: center;">Save</button>
+        <p id="errorBox" style="color:Red;">Invalid Personal Accesss Token</p>
       </div>
      <div id="message_container">
     <ul id="notification_list"> </ul>
