--- a/src/popup.html
+++ b/src/popup.html
@@ -52,7 +52,10 @@
   </div></center>
   <br>
   <button id="mark_all_read">Mark all as read</button>
-  <input type="checkbox" name="enable_notifications" value="enable_notifications"> Enable Notifications<br>
+  <div id= "enableDisableBox"> 
+    <input type="checkbox" name="enable_notifications" value="enable_notifications"> Enable Notifications<br>
+  </div>
+  
   <script src="config.js"></script>
   <script src="popup.js"></script>
   <script src="options.js"></script>
