--- a/src/popup.html
+++ b/src/popup.html
@@ -52,7 +52,7 @@
   </div></center>
   <br>
   <button id="mark_all_read">Mark all as read</button>
-  <div id= "enableDisableBox"> 
+  <div id= "enableDisableBox" align="right"> 
     <input type="checkbox" name="enable_notifications" value="enable_notifications"> Enable Notifications<br>
   </div>
   
