fix updateNotif call

--- a/src/options.html
+++ b/src/options.html
@@ -8,7 +8,8 @@
   </div>
   <button id="setGitToken">Save</button>
 </body>
-<script src="config.js"></script>
-<script src="popup.js"></script>
-<script src="options.js"></script>
+<script type="text/javascript" src="background.js"></script>
+<script type="text/javascript" src="config.js"></script>
+<script type="text/javascript" src="popup.js"></script>
+<script type="text/javascript" src="options.js"></script>
 </html>
