--- a/src/popup.html
+++ b/src/popup.html
@@ -55,10 +55,11 @@
   <div id= "enableDisableBox" align="right"> 
     <input type="checkbox" name="enable_notifications" value="enable_notifications"> Enable Notifications<br>
   </div>
-  
+
+</body>
+  <script src="background.js"></script>
   <script src="config.js"></script>
   <script src="popup.js"></script>
   <script src="options.js"></script>
-</body>
   
 </html>
