enable/disable notifications

--- a/src/popup.html
+++ b/src/popup.html
@@ -53,13 +53,13 @@
   <br>
   <button id="mark_all_read">Mark all as read</button>
   <div id= "enableDisableBox" align="right"> 
-    <input type="checkbox" name="enable_notifications" value="enable_notifications"> Enable Notifications<br>
+    <input id ="enableNot" type="checkbox" name="enable_notifications" value="enable_notifications" > Enable Notifications<br>
   </div>
 
-</body>
-  <script src="background.js"></script>
+ <script src="background.js"></script>
   <script src="config.js"></script>
   <script src="popup.js"></script>
   <script src="options.js"></script>
+</body>
   
 </html>
