--- a/src/popup.html
+++ b/src/popup.html
@@ -51,10 +51,17 @@
     <ul id="notification_list"> </ul>
   </div></center>
   <br>
-  <button id="mark_all_read">Mark all as read</button>
-  <div id= "enableDisableBox" align="right"> 
+  
+  
+
+  <div style="width: 100%; display: table;">
+    <div style="display: table-row">
+        <div style="display: table-cell;"> <button id="mark_all_read">Mark all as read</button> </div>
+        <div style="display: table-cell;"> <div id= "enableDisableBox" align="right"> 
     <input id ="enableNot" type="checkbox" name="enable_notifications" value="enable_notifications" > Enable Notifications<br>
-  </div>
+  </div> </div>
+    </div>
+</div>
 
  <script src="background.js"></script>
   <script src="config.js"></script>
