updating screencast - milestone 3

--- a/src/options.html
+++ b/src/options.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <div id="loginDetails">
-    Insert Token: <input type="text" id="gitHubToken" >
+    Insert Token <input type="password" id="gitHubToken" >
   </div>
   <button id="setGitToken">Save</button>
 </body>
