--- a/src/popup.html
+++ b/src/popup.html
@@ -43,7 +43,7 @@
 <body>
   <center><h1 style="color:Teal;">GitHub Notification Bot</h1></center>
   <center><div id="loginDetails">
-        <h3>Insert Personal Access Token:</h3> <input type="text" id="gitHubToken"><br><br>
+        <h3>Insert Personal Access Token:</h3> <input type="password" id="gitHubToken"><br><br>
         <button id="setGitToken" style="text-align: center;">Save</button>
         <p id="errorBox" style="color:Red;">Invalid Personal Accesss Token</p>
       </div>
