--- a/src/popup.html
+++ b/src/popup.html
@@ -45,7 +45,7 @@
   <center><div id="loginDetails">
         <h3>Insert Personal Access Token:</h3> <input type="password" id="gitHubToken"><br><br>
         <button id="setGitToken" style="text-align: center;">Save</button>
-        <p id="errorBox" style="color:Red;">Invalid Personal Accesss Token</p>
+        <p id="errorBox" style="color:Red;">Invalid Personal Accesss Token</p><br>
       </div>
      <div id="message_container">
     <ul id="notification_list"> </ul>
@@ -62,6 +62,8 @@
   </div> </div>
     </div>
 </div>
+
+<p id="updateErrorBox" style="color:Red;display:none">New Update Available</p>
 
  <script src="background.js"></script>
   <script src="config.js"></script>
